5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_2043.log
== SUBMITION (2019-03-23 17:23:10) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/4
print(round(n5, 2))
-- EXECUTION TIME:
0.236011
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:23:51) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(n1+n2+n3+n4)
print(round(n5, 2))
-- EXECUTION TIME:
0.187409
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
1.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:23:53) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(n1+n2+n3+n4)
print(round(n5, 2))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:23:54) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(n1+n2+n3+n4)
print(round(n5, 2))
-- EXECUTION TIME:
0.186792
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
1.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:10) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.132765
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:56) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.166125
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.52
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:57) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.197576
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.52
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:57) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.183622
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.52
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:57) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.162817
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.68
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:58) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.323307
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:

-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:58) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.331535
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:24:58) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.343552
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1593/2043/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:25:03) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:25:11) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:26:52) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:28:15) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (av1*1 + av2*2  + av3*3 + av4*4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:31:22) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n3 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.147778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 9, in <module>
    n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
NameError: name 'n2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:31:29) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n3 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)//(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.17456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 9, in <module>
    n5 = (n1+n2+n3+n4)//(av1+av2+av3+av4)
NameError: name 'n2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:32:22) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n3 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)//(av1+av2+av3+av4)
print(round(n5, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    n5 = (n1+n2+n3+n4)//(av1+av2+av3+av4)
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:32:33) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n3 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:33:10) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n3 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n4+n4)
print(round(n5, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    n5 = (n1+n2+n4+n4)
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:33:33) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n4+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:05) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n4+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.138571
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.98
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.75
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.09
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:36) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = n1+n2+n4+n4/av1+av2+av3+av4
print(round(n5, 2))
-- EXECUTION TIME:
0.152069
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
90.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
74.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
85.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:38) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = n1+n2+n4+n4/av1+av2+av3+av4
print(round(n5, 2))
-- EXECUTION TIME:
0.175546
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
90.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
90.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
74.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:38) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = n1+n2+n4+n4/av1+av2+av3+av4
print(round(n5, 2))
-- EXECUTION TIME:
0.211603
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
90.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
74.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
85.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:49) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.148738
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.52
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:34:50) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = (n1+n2+n3+n4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:36:43) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n1 = av1*1
n2 = av2*2
n3 = av3*3
n4 = av4*4
n5 = ((av1*2+)(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- EXECUTION TIME:
0.173934
-- ERROR:
  File "/home/codebench/codes/1593/2043/main.py", line 9
    n5 = ((av1*2+)(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:36:56) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))

n5 = ((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- ERROR:
File "XXXX", line 7
    print(round(n5, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:37:18) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))

n5 = ((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- ERROR:
File "XXXX", line 7
    print(round(n5, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:37:28) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))

n5 =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(round(n5, 2))
-- ERROR:
File "XXXX", line 7
    print(round(n5, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:37:39) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n5 =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
	  print(round(n5, 2))
-- ERROR:
File "XXXX", line 6
    print(round(n5, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:37:50) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
	  print(round(n, 2))
-- ERROR:
File "XXXX", line 6
    print(round(n, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:38:00) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
	  print(round(n, 2))
-- EXECUTION TIME:
0.23363
-- ERROR:
  File "/home/codebench/codes/1593/2043/main.py", line 6
    print(round(n, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:38:34) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(n)
-- ERROR:
File "XXXX", line 6
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:39:16) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(n)
-- ERROR:
File "XXXX", line 6
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:39:33) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(n)
-- ERROR:
File "XXXX", line 6
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:39:44) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print("me mama")
-- ERROR:
File "XXXX", line 6
    print("me mama")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:33:16) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print("fd")
-- ERROR:
File "XXXX", line 6
    print("fd")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:33:31) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(fd)
-- ERROR:
File "XXXX", line 6
    print(fd)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:33:44) 
-- CODE:
av1 = float(input("Digite sua prmeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n =((av1*1)+(av2*2)+(av3*3)+(av4*4)/(av1+av2+av3+av4)
print(round(n, 2)
-- ERROR:
File "XXXX", line 6
    print(round(n, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:25:37) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (av1+av2+av3+av4)
print(n/n1)
-- EXECUTION TIME:
0.126754
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.523076923076923
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.681987157823589
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:25:38) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (av1+av2+av3+av4)
print(n/n1)
-- OUTPUT:
2.523076923076923
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:28:07) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:28:13) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:21) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.165095
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:25) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.164156
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:28:26) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.135559
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
8.2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite sua primeira nota:Digite sua segunda nota:Digite sua terceira nota:Digite sua quarta nota:7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.406395
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite sua primeira nota:Digite sua segunda nota:Digite sua terceira nota:Digite sua quarta nota:7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.452363
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.936000000000002
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite sua primeira nota:Digite sua segunda nota:Digite sua terceira nota:Digite sua quarta nota:7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.582245
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.556374
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
Digite sua primeira nota:Digite sua segunda nota:Digite sua terceira nota:Digite sua quarta nota:7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(n/n1)
-- EXECUTION TIME:
0.475518
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
7.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
Digite sua primeira nota:Digite sua segunda nota:Digite sua terceira nota:Digite sua quarta nota:7.936000000000002
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:28:45) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(round(n/n1, 2)
-- EXECUTION TIME:
0.177421
-- ERROR:
  File "/home/codebench/codes/1593/2043/main.py", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:28:51) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(round(n/n1, 2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:28:59) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(round(n/n1, 2)
-- ERROR:
File "XXXX", line 8
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:29:27) 
-- CODE:
av1 = float(input("Digite sua primeira nota:"))
av2 = float(input("Digite sua segunda nota:"))
av3 = float(input("Digite sua terceira nota:"))
av4 = float(input("Digite sua quarta nota:"))
n = (av1*1+av2*2+av3*3+av4*4)
n1 = (1+2+3+4)
print(round(n/n1, 2))
-- EXECUTION TIME:
0.124151
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
